--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    {% include 'galeria/partials/_menu_lateral.html' %}
+    {% include 'galeria/partials/_header.html' %}
+    {% include 'galeria/partials/_menu.html' %}
     {% block content %}{% endblock %}
     {% include 'galeria/partials/_footer.html' %}  
 </body>
